Implemented a function that changed the icon for sound. so it better reflects what the sound state is.
Added a way to see. what is gonna be popular the coming selling period based on your selling price.

Fix minor grammatical errors.