@@ -2,26 +2,18 @@ package logic;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
-import javafx.geometry.Insets;
-import javafx.geometry.Pos;
-import javafx.scene.Scene;
-
 import javafx.scene.control.Button;
 import javafx.scene.control.Label;
 import javafx.scene.control.ProgressBar;
 import javafx.scene.control.Slider;
+import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.*;
-
-import javafx.scene.paint.Color;
 import javafx.scene.shape.Rectangle;
-import javafx.scene.text.Font;
-import javafx.stage.Modality;
-import javafx.stage.Stage;
-
 import java.net.URL;
 import java.util.ResourceBundle;
 
+// Vm options  --add-modules javafx.controls,javafx.media;
 
 public class MainGameLogicController implements Initializable{
     @FXML
@@ -50,6 +42,8 @@ public class MainGameLogicController implements Initializable{
 
 
 
+
+
     // Main player object and backgroundMusic.
     public Player mainPlayer = new Player();
     public MusicClass m1 = new MusicClass();
@@ -60,6 +54,7 @@ public class MainGameLogicController implements Initializable{
     public int count = 0;
     public int costPriceCount = 0;
     public int dayCounter =0;
+    public boolean muted = true;
 
 
 
@@ -70,6 +65,7 @@ public class MainGameLogicController implements Initializable{
         mainPlayer.setBankValue(10000);
         mainPlayer.setMarketValue(0);
         mainPlayer.setDebtValue(100000);
+        this.muteButton.setImage(new Image("Unmute.png"));
 
         // Initialize the players first set of items.
         mainPlayer.addASingleItemToCompany(new Items("Desktop",299,499,0 ));
@@ -210,6 +206,16 @@ public class MainGameLogicController implements Initializable{
     //Mute gameSound.
     public void muteSound(){
         m1.muteSound();
+        if (muted){
+            this.muted = false;
+            this.muteButton.setImage(new Image("mute.png"));
+        }else if(!muted){
+            this.muteButton.setImage(new Image("Unmute.png"));
+            this.muted = true;
+        }
+
+
+
     }
 
     //Update function
